<resources>
    <string name="app_name">Movies Craze</string>
    <string name="error_message">
        An error has occurred. Please try again by clicking REFRESH
    </string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="refresh">Refresh</string>

    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="poster">Poster</string>
    <string name="internet_not_working">Internet is not working on this device.</string>
</resources>
